@@ -94,13 +94,14 @@ accepts 0, 1, 2 or 3 for the \fIPC\fR argument:
 The default value is 1 (i.e. current cumulative values).
 .TP
 \fB\-e\fR, \fB\-\-enumerate\fR
-this option is used to output information held in internal tables about
-known log pages including their name, acronym and fields. If given, the
-\fIDEVICE\fR argument is ignored. When given once (e.g. '\-e') all known
-pages are listed, sorted in ascending acronym order (alphabetic). When
-given twice, vendor pages are excluded.  When given three times, all known
-pages are listed, sorted in ascending numeric order listed; when given four
-times, vendor pages are excluded from the numeric order.
+this option is used to output information held in this utility's internal
+tables about known log pages including their name, acronym and fields. If
+given, the \fIDEVICE\fR argument is ignored. When given once (e.g. '\-e')
+all known pages are listed, sorted in ascending alphabetical acronym order.
+.br
+When given twice, vendor pages are excluded.  When given three times, all
+known pages are listed, sorted in ascending numeric order listed; when given
+four times, vendor pages are excluded from the numeric order.
 .br
 The \fI\-\-filter=FL\fR and \fI\-\-verbose\fR options reduce the output
 of the enumeration.
