@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.46 [20201114] [svn: r867]
+Changelog for sg3_utils-1.46 [20201207] [svn: r868]
   - sg_rep_pip: report new provisioning initialization pattern cmd
   - sg_turs: estimated time-to-ready [20-061r2]
     - add --delay=MS option
@@ -39,6 +39,7 @@ Changelog for sg3_utils-1.46 [20201114] [svn: r867]
     - fix crash in sg_f2hex_arr() when fname not found
   - sg_lib: reprint cdb with illegal request sense key
     - asc/ascq match asc-num.txt @t10 20200708 [spc6r02]
+  - gcc-10: suppress warnings
   - remove space from end of source lines for git-svn
   - testing/sg_mrq_testing: new, for blocking mrq usage
   - testing/sgs_dd: add evfd flags and eventfd processing
